--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@sap/ux-specification": "^1.96.0",
     "sqlite3": "^4.2.0"
   },
   "scripts": {
-    "start": "cds run"
+    "start": "cds run",
+    "watch-risks": "cds watch --open risks/webapp/index.html#fe-lrop-v4",
+    "watch-mitigations": "cds watch --open mitigations/webapp/index.html#fe-lrop-v4"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -39,5 +42,9 @@
       "no-console": "off",
       "require-atomic-updates": "off"
     }
-  }
+  },
+  "sapux": [
+    "app/risks",
+    "app/mitigations"
+  ]
 }
