add cap authentication xssec

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^5",
-    "express": "^4"
+    "@sap/xssec": "^3.2.11",
+    "express": "^4",
+    "hdb": "^0.18.3"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.96.0",
@@ -46,5 +48,19 @@
   "sapux": [
     "app/risks",
     "app/mitigations"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sql"
+      },
+      "uaa": {
+        "kind": "xsuaa",
+        "credentials": {}
+      }
+    },
+    "hana": {
+      "deploy-format": "hdbtable"
+    }
+  }
 }
